# slideshow-sdl

./: CMakeLists.txt
include/: change_colour.h  component.h  component_type.h  font_manager.h  image_manager.h  optional.h  slide.h  slideshow.h
src/: change_colour.cpp  component.cpp  font_manager.cpp  image_manager.cpp  main.cpp  slide.cpp  slideshow.cpp
